--- a/BOT.ipynb
+++ b/BOT.ipynb
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -217,37 +217,24 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Пользователь:!skolko дтп\n",
-      "Введите город, который вас интересуетЯмальский район\n",
-      "введите уровень опасностиЛегкая степень\n",
-      "16\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Непосредственно сам бот\n",
     "while True:\n",
     "    try:\n",
-    "        input_text=input(u)\n",
-    "\n",
-    "                # Команды бота\n",
-    "        if input_text == \"!exit\":\n",
+    "        input_text=input(u).lower()\n",
+    "        # Команды бота\n",
+    "        if any(word in input_text for word in (\"завершить\", \"выход\", \"конец\")):\n",
     "            print(b, \"Завершение работы \")\n",
-    "        if input_text == \"!help\":\n",
+    "        if any(word in input_text for word in (\"help\", \"умеешь\", \"команды\")):\n",
     "            print(b,welcome )\n",
-    "        if input_text == \"!skolko дтп\":\n",
+    "        if any(word in input_text for word in (\"сколько\", \"городе\", \"проеду\")):\n",
     "            gor = input(\"Введите город, который вас интересует \")\n",
     "            level =input(\"введите уровень опасности \")\n",
     "            df = df[df['y'] == level]\n",
     "            print((df['features.properties.region']==gor).sum())\n",
     "            \n",
-    "        if input_text == \"!predict\":\n",
+    "        if any(word in input_text for word in (\"какой\", \"предскажи\", \"узнать\")):\n",
     "         # Ввод данных\n",
     "            df = read(True)\n",
     "            X = feat.transform(df[['feat','interaction']])\n",
@@ -470,18 +457,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
