--- a/BOT.ipynb
+++ b/BOT.ipynb
@@ -217,7 +217,18 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Пользователь:какой уровень\n",
+      "Где это произошло?!exit\n",
+      "Вы знаете точные координаты\n"
+     ]
+    }
+   ],
    "source": [
     "# Непосредственно сам бот\n",
     "while True:\n",
