--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "Для работы с данными и представления их как специальные структуры данных и операции для манипулирования числовыми таблицами используем встроенную библиотеку `pandas`"
+    "Для работы с данными и представления их как специальные структуры данных и операции для манипулирования таблицами используем встроенную библиотеку `pandas`"
    ]
   },
   {
